# pulse-wave

./: .env.example  .gitignore  LICENSE  PulseWave_Error_Log.md  README.md  docker-compose.yml  generate_report.py
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: pool.rs
backend/src/handlers/: alerts.rs  auth.rs  dashboard.rs  events.rs  mod.rs  projects.rs  websocket.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: alert.rs  event.rs  mod.rs  project.rs  user.rs
backend/src/services/: ai.rs  event_processor.rs  mod.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts  environment.ts
frontend/src/app/components/alert-form/: alert-form.component.ts
frontend/src/app/components/event-table/: event-table.component.ts
frontend/src/app/components/header/: header.component.ts
frontend/src/app/components/live-indicator/: live-indicator.component.ts
frontend/src/app/components/sidebar/: sidebar.component.ts
frontend/src/app/components/stats-card/: stats-card.component.ts
frontend/src/app/components/timeline-chart/: timeline-chart.component.ts
frontend/src/app/models/: interfaces.ts
frontend/src/app/pages/alerts/: alerts.component.ts
frontend/src/app/services/: alert.service.ts  api.service.ts  auth.service.ts  dashboard.service.ts  event.service.ts  project.service.ts  websocket.service.ts
(+6 files in other folders)
